--- a/ImdbLstm.ipynb
+++ b/ImdbLstm.ipynb
@@ -97,12 +97,12 @@
       "source": [
         "# Final evaluation of the model\n",
         "scores = model.evaluate(X_test, y_test, verbose=0)\n",
-        "print(\"Accuracy: %.2f%%\" % (scores[1]*100))"
+        "print(\"Accuracy: %.2f%%\" % (scores[1]*100))",
         
-        "Epoch 1/3 16750/16750 [===========] - 107s - loss: 0.5570 - acc: 0.7149
-         Epoch 2/3 16750/16750 [==========] - 107s - loss: 0.3530 - acc: 0.8577
-         Epoch 3/3 16750/16750 [==========] - 107s - loss: 0.2559 - acc: 0.9019
-         Accuracy: 86.79%"
+        "Epoch 1/3 16750/16750 [===========] - 107s - loss: 0.5570 - acc: 0.7149",
+        "Epoch 2/3 16750/16750 [==========] - 107s - loss: 0.3530 - acc: 0.8577",
+        "Epoch 3/3 16750/16750 [==========] - 107s - loss: 0.2559 - acc: 0.9019",
+         "Accuracy: 86.79%"
       ],
       "execution_count": 0,
       "outputs": []
