--- a/ImdbLstm.ipynb
+++ b/ImdbLstm.ipynb
@@ -106,6 +106,23 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+        {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6hx6dUrjGTbF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        
+        "Epoch 1/3 16750/16750 [===========] - 107s - loss: 0.5570 - acc: 0.7149",
+        "Epoch 2/3 16750/16750 [==========] - 107s - loss: 0.3530 - acc: 0.8577",
+        "Epoch 3/3 16750/16750 [==========] - 107s - loss: 0.2559 - acc: 0.9019",
+         "Accuracy: 86.79%"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
