--- a/ImdbLstm.ipynb
+++ b/ImdbLstm.ipynb
@@ -113,7 +113,7 @@
         
         "Epoch 1/3 16750/16750 [===========] - 107s - loss: 0.5570 - acc: 0.7149\n",
         "Epoch 2/3 16750/16750 [==========] - 107s - loss: 0.3530 - acc: 0.8577\n",
-        "Epoch 3/3 16750/16750 [==========] - 107s - loss: 0.2559 - acc: 0.9019",
+        "Epoch 3/3 16750/16750 [==========] - 107s - loss: 0.2559 - acc: 0.9019\n",
          "Accuracy: 86.79%"
       ],
       "execution_count": 0,
