--- a/ImdbLstm.ipynb
+++ b/ImdbLstm.ipynb
@@ -111,10 +111,10 @@
       },
       "source": [
         
-        "Epoch 1/3 16750/16750 [===========] - 107s - loss: 0.5570 - acc: 0.7149\n",
-        "Epoch 2/3 16750/16750 [==========] - 107s - loss: 0.3530 - acc: 0.8577\n",
-        "Epoch 3/3 16750/16750 [==========] - 107s - loss: 0.2559 - acc: 0.9019\n",
-         "Accuracy: 86.79%"
+        "Epoch 1/3 25000 /25000  [===========] - 277s 11ms/step - loss: 0.4384 - acc: 0.7861\n",
+        "Epoch 2/3 25000 /25000  [==========]  - 274s 11ms/step - loss: 0.3004 - acc: 0.8800\n",
+        "Epoch 3/3 25000 /25000  [==========]  - 285s 11ms/step - loss: 0.2622 - acc: 0.8968\n",
+         "Accuracy : 86.65%"
       ],
       "execution_count": 0,
       "outputs": []
